--- a/Backend-dotnet8/appsettings.json
+++ b/Backend-dotnet8/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "local": "Server=DESKTOP-IIR56KK;Database=JwtBackend8-V1;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:7190",
+    "ValidAudience": "https://localhost:3000",
+    "Secret": "AAAAAAAAAAAAAAAASASDFASDFDGFHGFJGHGFJHGKJKGKJHKJHLJKLHJKKG"
+  }
 }
